// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nEmptyState > should render correctly with emoji 1`] = `
"<div class="MNI-empty-state container" data-test-id="empty-state">
  <div class="icon"><span>😿</span></div>
  <div class="text">
    <div class="heading">
      <MNI-heading-stub align="center" tag="span" bold="false" size="xlarge"></MNI-heading-stub>
    </div>
    <div class="description">
      <MNI-text-stub color="text-base" bold="false" size="medium" compact="false" tag="span"></MNI-text-stub>
    </div>
  </div>
  <MNI-tooltip-stub aschild="false" placement="top" disabled="true" showafter="0" visible="false" enterable="true" teleported="true" offset="8" buttons="" justifybuttons="flex-end" avoidcollisions="true"></MNI-tooltip-stub>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`N8nEmptyState > should render correctly with icon 1`] = `
"<div class="MNI-empty-state container" data-test-id="empty-state">
  <div class="icon">
    <MNI-icon-stub icon="plus" strokewidth="1.5" size="40" spin="false" color="foreground-xdark"></MNI-icon-stub>
  </div>
  <div class="text">
    <div class="heading">
      <MNI-heading-stub align="center" tag="span" bold="false" size="xlarge"></MNI-heading-stub>
    </div>
    <div class="description">
      <MNI-text-stub color="text-base" bold="false" size="medium" compact="false" tag="span"></MNI-text-stub>
    </div>
  </div>
  <MNI-tooltip-stub aschild="false" placement="top" disabled="true" showafter="0" visible="false" enterable="true" teleported="true" offset="8" buttons="" justifybuttons="flex-end" avoidcollisions="true"></MNI-tooltip-stub>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
